Movil menu adaptative. Locates DEV and EN

--- a/locales/en/text.json
+++ b/locales/en/text.json
@@ -1,46 +1,46 @@
 {
-	"nav_user":"Usuario",
-	"nav_user_sign":"Registrarse",
-	"nav_user_login":"Acceder",
-	"nav_user_close":"Cerrar sesión",
-	"nav_admin":"Administrador",
-	"nav_admin_new_building":"Nuevo Edificio",
-	"nav_admin_admin_building":"Configurar Edificio",
-	"nav_admin_remove_building":"Eliminar Edificio",
-	"nav_building":"Edificios",
-	"nav_building_my_buildings":"Mis Fincas",
-	"nav_building_choose_buildings":"Elegir Finca",
-	"nav_general_email":"Mensaje",
-	"nav_general_email_admin":"Administrador",
-	"nav_general_email_superadmin":"Super Administrador",
-	"nav_general_email_comunity":"Comunidad",
+	"nav_user":"User",
+	"nav_user_sign":"Sign up",
+	"nav_user_login":"Login",
+	"nav_user_close":"Close session",
+	"nav_admin":"Manager",
+	"nav_admin_new_building":"New Building",
+	"nav_admin_admin_building":"Setup Building",
+	"nav_admin_remove_building":"Remove building",
+	"nav_building":"Buildings",
+	"nav_building_my_buildings":"My Flats",
+	"nav_building_choose_buildings":"Choose Flat",
+	"nav_general_email":"Message",
+	"nav_general_email_admin":"Manager",
+	"nav_general_email_superadmin":"Super Manager",
+	"nav_general_email_comunity":"Comunity",
 	
-	"general_search_title":"Búsqueda más fácil.",
-	"general_search":"Puede buscar el edificio que desea escribiendo en el área de búsqueda. Puede introducir el nombre de la calle, del pueblo/ciudad, de la provincia o del país... aunque una búsqueda más concreta traerá consigo resultados mejor filtrados.",
-	"general_warning":"¡¡Ojito!!",
-	"general_not_resource":"Recurso no encontrado.",
-	"general_not_resource_title":"El recurso del sistema que está buscando no está disponible.",
-	"general_not_resource_paragraph":"Quizá esté invocando el método de manera erronea o con los parámetros confundidos. También es posible que aún no se hayan creado ningún edificio o ninguno de los recursos que busca, o sea, la causa puede que el recurso no exista y no que no esté siendo encontrado. Le rogamos vuelva a intentarlo pasado un tiempo. Si el problema persiste puede enviarme un mensaje indicando el tipo de recurso al que está intentando acceder. Gracias.",
-	"general_not_allowed":"Recurso no permitido.",
-	"general_not_allowed_title":"No tiene presmisos para acceder a este recurso del sistema.",
-	"general_not_allowed_paragraph":"En estos momentos, su perfil de usuario (rol) no le permite acceder a ciertas características de la aplicación. Si cree que este recurso debería de estar disponibe para usted envíeme un mensaje y comenteme la situación. Gracias.",
-	"general_not_implemented_title":"Esta funcionalidad no está operativa",
-	"general_not_implemented":"Sintiéndolo mucho, la funcionalidad a la que está intentando acceder aún no está implementada. Se muestra aquí con la intención de realizar una especie de encuesta... si recibo los suficientes mensajes a favor del desarrollo de la misma, pues no me quedará más remedio que realizar el trabajo. En caso contrario, esto nunca se modificará. Gracias.",
+	"general_search_title":"Easy searching.",
+	"general_search":"You can search the building writing on the text area. You can insert the name of the street, village or city, province, or even the country... even though a better terms to search will produce better filtering results.",
+	"general_warning":"Warning!!",
+	"general_not_resource":"Resource not Found.",
+	"general_not_resource_title":"The resource of the system you are trying to get, is not avaiable.",
+	"general_not_resource_paragraph":"Maybe you are invoking the method on a wrong way or with the wrong arguments. It is too posible that no building, or no of these resource that you are looking for, have been yet created. Please try again past a little time. If the problem persists you can send me a message indicating the type of resource you are trying to access. Thank You.",
+	"general_not_allowed":"Not allowed resource!!",
+	"general_not_allowed_title":"You have not enough permissions to access this system resource.",
+	"general_not_allowed_paragraph":"In this moments, your rol doesn´t let you access at many features of the application. If you think this resource should be available for you, send me a message and tell me situation. Thank you!!",
+	"general_not_implemented_title":"This functionallity is not operational",
+	"general_not_implemented":"I am sorry a lot, but, functionallity you are trying to access is not yet implemented.", It shows here with the attempt to make an inquiry... if I receive too many messages, I´ll do. Thank you!!",
 	
-	"landing_wellcome":"Bienvenidos a CleanStela",
-	"landing_instructions":"El primer paso para acceder al interior de la aplicación y poder disfrutar de las ventajas que ofrece (de momento limitadas), tiene que registrarse. Para ello vaya al menú de \"Usuario\" y seleccione \"Registro\". Si usted ya está registrado y ha cerrado la sesión despliegue el \"Usuario\" y seleccione \"Acceder\"",
-	"landing_presentation":"Una aplicación que nos ayudará a tener limpio nuestro edificio.",
-	"landing_page":"Entra y mira el turno de limpieza o cuándo será tu turno.",
-
-	"user_page_wellcome":"Bienvenido ",
-	"user_friendly_title":"¿Por qué así?",
+	"landing_wellcome":"Wellcome to CleanStela",
+	"landing_presentation":"An application that will help us to maintain clean our building.",
+	"landing_page":"This application had been designed trying to make it the most diaphanous as possible, erasing a big amount of decoration and many possible configuration options that could obfuscate at user. This is because the purpose to make arrive this web application at the greatest number of people, technological barrier preventing a problem",
+	"landing_instructions":"The first step to acces at app and can enjoy with the advantage that it offers (limited by the moment), you must to register. For this, go at \"User\" menu and select \"Sign in\n. If you are registered but the session closed, go \"User\" and select \"Loggin",
+	
+	"user_page_wellcome":"Wellcome",
+	"user_friendly_title":"Why so?",
 	"user_friendly":"Esta aplicación ha sido diseñada tratando de hacerla lo más diáfana posible, eliminando gran parte de decoración y posibles opciones de configuración que puedan ofuscar al usuario. Esta intención se debe al propósito de hacer llegar la aplicación web al mayor número de personas posibles sin que la barrera tecnológica sea un problema. Esperamos que disfruten.",
 	"user_mail_title":"Mensajes para dejar las cosas claras",
 	"user_mail":"Puedes enviar mensajes al administración de alguna de tus viviendas sobre aspectos relacionados con la administración del edificio, o enviármelos a mi, el 'director' de todo esto. O sea, si ha encontrado algún error en el funcionamiento, y quiere echarmelo en cara para que lo arregle, puede hacerlo mediante esta manera. También se puede enviar un mensaje a la comunidad, o sea, para algo que quiera que toda la comunidad sea partícipe, puede hacerlo mediante esta opción.",
 	"user_pass_not_match":"Revisa tus datos. El nombre de usuario y contraseña parecen no coincidir.",
 	"user_email_registered":"El correo %s está registrado. En caso de que tú seas el propietario de ese correo, accede <a href='/user'>aquí</a>",
 	"user_name_registered":"El nombre de usuario %s está registrado. En caso de que éste sea tu nick, accede <a href='/user'>aquí</a>",
-	"user_admin_power_title":"Un gran poder, conlleva una gran responsabilidad.",
+	"user_admin_power_title":"With great power, comes great responsibility.",
 	"user_admin_power":"La tarea de administrador debería estar reservada a la persona encargada de esas labores en el edificio, bien sea un profesional gestor de fincas o el presidente de turno de la comunidad. En cualquier caso, el administrador deberá ser quien responda a las diversas dudas de los usuarios del edificio.",
 	
 	
@@ -51,12 +51,12 @@
 	"user_fill_email":"Email",	
 	"user_lang":"Idioma",
 	
-	"user_login_wellcome":"Bienvenido a la página de control de acceso.",
-	"user_login_send_button":"Acceder",
+	"user_login_wellcome":"Wellcome to the control access page.",
+	"user_login_send_button":"Access",
 	
-	"user_signup_wellcome":"Bienvenido a la página de registro.",
+	"user_signup_wellcome":"Wellcome to the sign up page.",
 	"user_signup_fill_rol":"Rol",
-	"user_signup_send_button":"Registrase",
+	"user_signup_send_button":"Sign up",
 	
 	"user_choose_title":"Edificios por su cuenta.",
 	"user_choose_explanation_title":"Puede agregar o eliminar los pisos a su cuenta personal.",
@@ -115,4 +115,5 @@
 	"email_response_response":"Responder",
 	"email_response_vote_favor":"A favor",
 	"email_response_vote_against":"En contra"
+
 }
